# yt-music-tauri

./: LICENSE  package.json  pnpm-lock.yaml
.github/workflows/: release.yml
src-tauri/: Cargo.toml  info.plist  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/src/inject/: main.js
