[package]
name = "yt-music-tauri"
version = "1.1.0"
description = "Youtube Music Desktop App built with Tauri"
authors = ["sainak"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri-plugin-opener = "2"
serde_json = "1"
tauri = { version = "2.2.0", features = ["image-ico", "image-png", "macos-proxy"] }
tauri-plugin-window-state = "2.2.0"
tauri-plugin-single-instance = "2.2.0"
tauri-plugin-decorum = "1.1.1"
tauri-plugin-clipboard-manager = "2"
tauri-plugin-store = "2"
serde = "1.0.219"
